--- a/main.ipynb
+++ b/main.ipynb
@@ -6,10 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import combinations\n",
-    "from typing import Iterable, Iterator, Tuple, TypeVar\n",
-    "from itertools import permutations\n",
-    "from itertools import combinations\n",
+    "from typing import Iterable, Iterator, Tuple\n",
+    "from itertools import permutations, combinations\n",
     "from math import sqrt\n",
     "\n"
    ]
@@ -121,7 +119,8 @@
       "Test question2 passed!\n",
       "Test question3 passed!\n",
       "Test question4 passed!\n",
-      "Test question5 passed!\n"
+      "Test question5 passed!\n",
+      "All tests passed!\n"
      ]
     }
    ],
@@ -145,7 +144,45 @@
     "    print('Test question4 passed!')\n",
     "    assert main([[7,3,2],[5,6,2],[1,1,5],[8,7,3]]) == [[[7, 3, 2], [5, 6, 2], [1, 1, 5]], [[7, 3, 2], [5, 6, 2], [8, 7, 3]]]\n",
     "    print('Test question5 passed!')\n",
+    "    print('All tests passed!')\n",
     "test_code()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To answer question 1 you should run without_greater_5(list[str]) <br>\n",
+    "To answer question 2 you should run without_odd_numbers_and_mult5(list[str])<br>\n",
+    "To answer question 3 you should run without_string(string,string_prohibida)<br>\n",
+    "To answer question 4 you should run without_string_permutations(string,string_prohibida) <br>\n",
+    "To anser question 5 you should run main(list[list[int]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[7, 3, 2], [5, 6, 2], [1, 1, 5]],\n",
+       " [[7, 3, 2], [5, 6, 2], [8, 7, 3]],\n",
+       " [[7, 3, 2], [5, 6, 2], [4, 5, 6]],\n",
+       " [[7, 3, 2], [1, 1, 5], [4, 5, 6]],\n",
+       " [[7, 3, 2], [8, 7, 3], [4, 5, 6]],\n",
+       " [[5, 6, 2], [1, 1, 5], [4, 5, 6]],\n",
+       " [[5, 6, 2], [8, 7, 3], [4, 5, 6]]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main([[7,3,2],[5,6,2],[1,1,5],[8,7,3],[4,5,6]])"
    ]
   }
  ],
